--- a/aula01.html
+++ b/aula01.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Beraldi's SHOES</title>
 </head>
 <body>
-    dfgfdgdfg
+   <H1>BERALDI'S SHOES</H1> 
+<h2>"Pise com estilo:O seu Destino para Tênis Exclusivos e Confortáveis!"</h2>
 
-    fghfgh
+
+    
 </body>
 </html>
